# thinking-modules

./: README.md  module_fixture.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: ci.yml  publish.yml
fixture/: x.py
test/: accumulator.py  fixtures.py  random_util.py  test_definitions.py  test_immutable.py  test_main.py  test_model.py  test_recursive_import.py  test_recursive_import_from_root.py  test_recursive_import_from_subpkg.py  test_scanning.py
thinking_modules/: model.py
