[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinking-modules"
version = "0.0.3"
description = "Module-related python utilities - recursive package scan, modeling of names and modules, etc"
readme = "README.md"
authors = [{ name = "Filip Malczak", email = "filip.malczak@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
keywords = ["thinking", "import", "scan", "modules", "meta"]
dependencies = [
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/FilipMalczak/thinking-modules"

[tool.setuptools]
packages = ["thinking_modules"]